--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,12 @@ li{
     margin-right: 70vw;
 }
 .red{
-    background: rgba(185, 185, 6, 0.737);
-    font-size: 2.2vw;
-    font-style: bold;
-    padding: 30px;
-    height: 30vw;
+  background: rgba(185, 185, 6, 0.737);
+  font-size: 3.5vw;
+  font-style: bold;
+  padding: 30px;
+  height: 20vh;
+  overflow-y: scroll;
 }
 @media only screen and(max-width: 720px) {
     ul:first-child{
