--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-body{
+.red{
     background-size: 70vw;
     margin: 0 auto;
 }
@@ -61,13 +61,25 @@ li{
     margin-right: 70vw;
 }
 .red{
-  background: rgba(185, 185, 6, 0.737);
-  font-size: 3.5vw;
-  font-style: bold;
-  padding: 30px;
-  height: 20vh;
-  overflow-y: scroll;
+    background: rgba(185, 185, 6, 0.737);
+    font-size: 3.5vw;
+    font-style: bold;
+    padding: 30px;
+    height: 10vh;
+    overflow-y: scroll;
 }
+.red::-webkit-scrollbar {
+        width: 1em;
+        }
+        
+        .red::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        }
+        
+        .red::-webkit-scrollbar-thumb {
+        background-color: dodgerblue;
+        outline: 1px solid #333333;
+        }
 @media only screen and(max-width: 720px) {
     ul:first-child{
         display: flex;
