--- a/css/style.css
+++ b/css/style.css
@@ -60,14 +60,14 @@ li{
     position: absolute;
     margin-right: 70vw;
 }
-.red{
-    background: rgba(185, 185, 6, 0.737);
-    font-size: 3.5vw;
-    font-style: bold;
-    padding: 30px;
-    height: 10vh;
-    overflow-y: scroll;
-}
+    .red{
+        background: rgba(185, 185, 6, 0.737);
+        font-size: 1em;
+        font-style: bold;
+        padding: 30px;
+        height: 20vh;
+        overflow-y: scroll;
+    }
 .red::-webkit-scrollbar {
         width: 1em;
         }
